tests/NormalTests/paczka1/fuzzy1/51554170.err
Error in line 1: gFnr6sS5 S563 74,2
Error in line 6: z4WE7sc7f S563 83,7
Error in line 9: S905 S710 32,0
Error in line 18: DeALkww S457 11,2
Error in line 27: S905 S710 90,8
